--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
     "@fontsource-variable/roboto": "5.2.5",
-    "@mui/material": "6.4.7",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@tanstack/react-query": "^5.85.0",
     "@tanstack/react-router": "^1.131.2",
     "@tanstack/react-router-devtools": "^1.131.2",
     "@tanstack/react-start": "^1.131.2",
